@@ -1,3 +1,9 @@
+2009-03-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
+
+	* samplebuffer_iterators.h: Added optional second argument
+	to SAMPLE_ITERATOR_CHANNEL::init() and an overloaded
+	version of SAMPLE_ITERATOR_CHANNEL::begin().
+
 2009-02-08  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
 
 	* library interface version 21:0:1 frozen (2.6.0 release)
